[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/principal.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="butao_patients" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -215.5
margin_top = -266.0
margin_right = 215.5
margin_bottom = -180.0
text = "Pacientes"

[node name="button_agenda" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -215.5
margin_top = -156.0
margin_right = 215.5
margin_bottom = -70.0
text = "Agenda"

[node name="Button_test" type="Button" parent="."]
margin_left = 155.0
margin_top = 44.0
margin_right = 715.0
margin_bottom = 215.0

[connection signal="pressed" from="butao_patients" to="." method="_on_butao_patients_pressed"]
[connection signal="pressed" from="button_agenda" to="." method="_on_button_agenda_pressed"]
[connection signal="pressed" from="Button_test" to="." method="_on_Button_test_pressed"]
